--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                     <p>
                         With a background in psychology, I’m a passionate UX researcher based in California.
                         My journey is anchored in an appreciation for technology and a fascination with the human mind.
-                        By blending my psychological insights with user experiment research,
-                        I uncover deep-rooted user behaviors and preferences, translating them into thoughtful and intuitive digital designs.
+                        By blending my <b>psychological insights with user experiment research,</b>
+                        I uncover <b>deep-rooted user behaviors and preferences</b>, translating them into thoughtful and intuitive digital designs.
 
                     </p>
                     <p class="pt-2">
