--- a/index.html
+++ b/index.html
@@ -6,32 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- Bootstrap 4 CSS and JavaScript -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-md navbar-dark">
-            <a class="navbar-brand" href="index.html">
-                <img src="images/logo.png" alt="img" class="logo">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="work.html">Work</a>
-                    </li>
-                </ul>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <header>
+                    <nav class="navbar navbar-expand-md navbar-dark">
+                        <div class="container">
+                            <a class="navbar-brand" href="index.html">
+                                <img src="images/logo.png" alt="img" class="logo">
+                            </a>
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                <ul class="navbar-nav ml-auto">
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="index.html">About</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="work.html">Work</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </nav>
+                </header>
             </div>
-        </nav>
-    </header>
+        </div>
+    </div>
 
     <div class="banner">
         <div class="container">
@@ -81,66 +86,15 @@
     </footer>
 
     <style>
-        /* Add this style for the navigation background color and full width */
+        /* Add this style for the navigation background color */
         header.navbar.navbar-expand-md.navbar-dark {
             background-color: #333; /* Change the background color to your desired color */
-            width: 100%;
-            left: 0;
-            right: 0;
-            position: absolute;
         }
     </style>
-
-    <script>
-    $(document).ready(function() {
-        console.log('JavaScript code is running.');
-
-        // Bounce animation for the logo
-        $('.logo').hover(
-            function() {
-                $(this).addClass('bounce');
-            },
-            function() {
-                $(this).removeClass('bounce');
-            }
-        );
-
-        // Bounce animation for the "Work" header
-        $('.animated-title').hover(
-            function() {
-                $(this).addClass('bounce');
-            },
-            function() {
-                $(this).removeClass('bounce');
-            }
-        );
-
-        // Button hover effect
-        $('.page-button').hover(
-            function() {
-                console.log('Mouse entered the element.');
-                $(this).css('background-color', 'blue');
-            },
-            function() {
-                console.log('Mouse left the element.');
-                $(this).css('background-color', '');
-            }
-        );
-
-        // Navigation link hover effect
-        $('header ul a').hover(
-            function() {
-                $(this).toggleClass('nav-hover');
-            }
-        );
-
-        // Animated text fadeInUp effect
-        const animatedText = document.querySelector('.animated-text');
-        if (animatedText) {
-            animatedText.style.animation = 'fadeInUp 1s forwards';
-        }
-    });
-    </script>
+      <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
 
