--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="container pt-5 pb-5">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="Images/IMG_9745.jpg" class="img-fluid" alt="img">
+                    <img src="images/IMG_9745.jpg" class="img-fluid" alt="img">
                 </div>
                 <div class="col-md-6 pt-md-0 pt-4">
                     <h2 class="pb-3">About</h2>
